--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/v54dt/restful-api#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "sync": "^0.2.5"
   }
 }
